--- a/public/createBank.ejs
+++ b/public/createBank.ejs
@@ -39,8 +39,9 @@
                     <option value="<%= employees[i].perID %>"> <%= employees[i].perID %> </option>
                 <% } %>
             </select>
-        <button>Cancel</button>
+        <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
         <input type="submit" value="Create Bank" id="create"> 
     </form>
+    
 </body>
 </html>
