Create the createFee page

--- a/public/createBank.ejs
+++ b/public/createBank.ejs
@@ -39,6 +39,7 @@
                     <option value="<%= employees[i].perID %>"> <%= employees[i].perID %> </option>
                 <% } %>
             </select>
+        </div>
         <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
         <input type="submit" value="Create Bank" id="create"> 
     </form>
