add a message on the screen to display errors

--- a/public/createBank.ejs
+++ b/public/createBank.ejs
@@ -40,9 +40,10 @@
                 <% } %>
             </select>
         </div>
+        <p 
         <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
         <input type="submit" value="Create Bank" id="create"> 
     </form>
-    
+    <p hidden id="message"></p>
 </body>
 </html>
