--- a/public/createCustomerRole.ejs
+++ b/public/createCustomerRole.ejs
@@ -18,6 +18,7 @@
         <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
         <input type="submit" value="Add Customer Role" id="create"> 
     </form>
+    <p hidden id="message"></p>
 </body>
 </html>
 
