--- a/public/createFee.ejs
+++ b/public/createFee.ejs
@@ -31,6 +31,6 @@
         <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
         <input type="submit" value="Confirm" id="create"> 
     </form>
-    
+    <p hidden id="message"></p>
 </body>
 </html>
