--- a/public/createFee.ejs
+++ b/public/createFee.ejs
@@ -4,7 +4,7 @@
     <title>CS4400</title>
     <script src="/js/createFee.js" defer></script>
 </head>
-<body>
+<body onload="updateAccounts();">
     <h1>New Fee</h1>
     <form>
         <!-- drop downs :D -->
