--- a/public/displayAccountStats.ejs
+++ b/public/displayAccountStats.ejs
@@ -7,5 +7,8 @@
 <body>
     <h1>Display Account Stats</h1>
     <table id="table" align = "center" border="1px"></table>
+    <script>
+        var accountStats = '<%- JSON.stringify(accountStats) %>';
+    </script>
 </body>
 </html>
