set up view stats

--- a/public/displayCorporationStats.ejs
+++ b/public/displayCorporationStats.ejs
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>CS4400</title>
-    <script src="/js/displayAccountStats.js" defer></script>
+    <script src="/js/displayCorporationStats.js" defer></script>
 </head>
 <body>
-    <h1>Display Account Stats</h1>
+    <h1>Display Corporation Stats</h1>
     <table id="table" align = "center" border="1px"></table>
     <script>
         console.log("hi");
-        var accountStats = '<%- JSON.stringify(accountStats) %>';
+        var accountStats = '<%- JSON.stringify(corporationStats) %>';
     </script>
 </body>
 </html>
