--- a/public/displayCorporationStats.ejs
+++ b/public/displayCorporationStats.ejs
@@ -9,7 +9,7 @@
     <table id="table" align = "center" border="1px"></table>
     <script>
         console.log("hi");
-        var accountStats = '<%- JSON.stringify(corporationStats) %>';
+        var corporationStats = '<%- JSON.stringify(corporationStats) %>';
     </script>
 </body>
 </html>
