--- a/public/displayEmployeeStats.ejs
+++ b/public/displayEmployeeStats.ejs
@@ -8,7 +8,7 @@
     <h1>Display Employee Stats</h1>
     <table id="table" align = "center" border="1px"></table>
     <script>
-        var accountStats = '<%- JSON.stringify(employeeStats) %>';
+        var employeeStats = '<%- JSON.stringify(employeeStats) %>';
     </script>
 </body>
 </html>
