--- a/public/displayBankStats.ejs
+++ b/public/displayBankStats.ejs
@@ -8,7 +8,7 @@
     <h1>Display Bank Stats</h1>
     <table id="table" align = "center" border="1px"></table>
     <script>
-        var accountStats = '<%- JSON.stringify(bankStats) %>';
+        var bankStats = '<%- JSON.stringify(bankStats) %>';
     </script>
 </body>
 </html>
