--- a/public/displayCustomerStats.ejs
+++ b/public/displayCustomerStats.ejs
@@ -8,7 +8,7 @@
     <h1>Display Customer Stats</h1>
     <table id="table" align = "center" border="1px"></table>
     <script>
-        var accountStats = '<%- JSON.stringify(customerStats) %>';
+        var customerStats = '<%- JSON.stringify(customerStats) %>';
     </script>
 </body>
 </html>
