--- a/public/createEmployeeRole.ejs
+++ b/public/createEmployeeRole.ejs
@@ -18,7 +18,7 @@
         <div><label for="salary">Salary</label> <input id="salary" /></div>
         <div><label for="num_payments"># of Payments</label> <input id="num_payments" /></div>
         <div><label for="earnings">Accumulated Earnings</label> <input id="earnings" /></div>
-        <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/managerMenu'" />
+        <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/manageUsers'" />
         <input type="submit" value="Add Employee Role" id="create">
     </form>
     <p hidden id="message"></p>
