--- a/public/replaceManager.ejs
+++ b/public/replaceManager.ejs
@@ -26,6 +26,7 @@
         <div>
             <label for="salary">Salary: </label>
             <input id = "salary" />
+         </div>
         <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/manageUsers'" />
         <input type="submit" value="Hire" id="create"> 
     </form>
