--- a/public/makeAccountTransfer.ejs
+++ b/public/makeAccountTransfer.ejs
@@ -28,7 +28,7 @@
             <input id="amount" />
         </div>
 
-        <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
+        <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/customerMenu'" />
         <input type="submit" value="Confirm" id="transfer"> 
     </form>
     <h2>To</h2>
