--- a/public/manageOverdraft.ejs
+++ b/public/manageOverdraft.ejs
@@ -4,51 +4,54 @@
     <title>CS4400</title>
     <script src="/js/manageOverdraft.js" defer></script>
 </head>
-<body onload="updateAccounts();">
-    <h1>Manage Overdraft</h1>
+<body onload="updateCheckingAccount(); updateSavingsAccount();">
+    <h1>Checking</h1>
     <form>
         <!-- drop downs :D -->
         <div>
-            <label for="Availablbe Checking Accounts"></label>
-            <select id="CheckingIDs">
-                <% for (const i in checkingID) { %>
-                    <option value="<%= checkingID[i].accountID %>"> <%= checkingID[i].accountID %> </option>
+            <label for="checkingbank"></label>
+            <select id="checkingbank">
+                <% for (const i in checkingbanks) { %>
+                    <option value="<%= checkingbanks[i].bankID %>"> <%= checkingbanks[i].bankID %> </option>
                 <% } %>
             </select>
         <div>
-            <label for="accept">
-                <input type="checkbox" id="submit" name="submit" value="yes" onclick="activateOverdraft(this)"> Submit
-            </label>
-            
-            <script>
-                function activateOverdraft(submit) {
-                    SavingsIDs.disabled=submit.checked? false:true;
-                    if (!SavingIDs.disabled) {
-                        SavingsIDs.focus();
-                    }
-                }
-            <script>
-        <div>
-            <label for="Available Savings Accounts"></label>
-            <select id="SavingIDs">
-                <% for (const i in accounts) { %>
-                    <option value="<%= savingsID[i].accountID %>"> <%= savingsID[i].accountID %> </option>
+            <label for="checkingaccount"></label>
+            <select id="checkingaccount">
+                <% for (const i in checkingaccounts) { %>
+                    <option value="<%= checkingaccounts[i].accountID %>"> <%= checkingaccounts[i].accountID %> </option>
                 <% } %>
             </select>
         </div>
+
+        <% if (admin) { %>
+            <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
+        <%} else {%>
+            <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/customerMenu'" />
+        <% } %>
+        <input type="submit" value="Stop" id="stop"> 
+        <input type="submit" value="Start" id="start"> 
+
+    </form>
+    <h2>Savings</h2>
+    <form>
+        <!-- drop downs :D -->
         <div>
-            <label for="type"></label>
-            <input id="type" />
+            <label for="savingsbank"></label>
+            <select id="savingsbank">
+                <% for (const i in savingsbanks) { %>
+                    <option value="<%= savingsbanks[i].bankID %>"> <%= savingsbanks[i].bankID %> </option>
+                <% } %>
+            </select>
+        <div>
+            <label for="savingsaccount"></label>
+            <select id="savingsaccount">
+                <% for (const i in savingsaccounts) { %>
+                    <option value="<%= savingsaccounts[i].accountID %>"> <%= savingsaccounts[i].accountID %> </option>
+                <% } %>
+            </select>
         </div>
-        
-        //Change to be back to window based on who came here
-        <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
-        
-        if (submit.checked) {   
-            <input type="submit" value="Confirm" id="Start Overdraft"> 
-        } else {
-            <input type="submit" value="Confirm" id="Stop Overdraft">
-        }
+
     </form>
     <p hidden id="message"></p>
 </body>
