--- a/public/createBank.ejs
+++ b/public/createBank.ejs
@@ -20,8 +20,8 @@
         <div>
             <label for="manager"></label>
             <select id="manager">
-                <% for (const i in employees) { %>
-                    <option value="<%= employees[i].perID %>"> <%= employees[i].perID %> </option>
+                <% for (const i in managers) { %>
+                    <option value="<%= managers[i].perID %>"> <%= managers[i].perID %> </option>
                 <% } %>
             </select>
         <div>
