--- a/public/adminAccountAccess.ejs
+++ b/public/adminAccountAccess.ejs
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>CS4400</title>
-    <script src="/js/customerAccountAccess.js" defer></script>
+    <script src="/js/adminAccountAccess.js" defer></script>
 </head>
-<body onload="updateAccounts();">
+<body>
     <h1>Add New Account</h1>
     <form>
         <!-- drop downs :D -->
@@ -37,8 +37,8 @@
             </select>
         </div>
         <div>
-            <label for="initbalance"> Initial Balance:</label>
-            <input id="initbalance" />
+            <label for="inibalance"> Initial Balance:</label>
+            <input id="inibalance" />
         </div>
         <div>
             <label for="interest">Interest Rate:</label>
